namespace UmlCreator.Core.Param
{
    /// <summary>
    /// 出力形式
    /// </summary>
    public enum OutputType
    {
        /// <summary>
        /// 無
        /// </summary>
        None,
        /// <summary>
        /// アスキー
        /// </summary>
        Ascii,
        /// <summary>
        /// 画像
        /// </summary>
        Image
    }
}